--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 			<div class="social pull-right">
 				<ul class="list-unstyled">
-					<li class="animated wow fadeInRight" data-wow-delay=".2s"><a href="#"><img src="img/facebook.png" alt="" title=""></a></li>
+					<li class="animated wow fadeInRight" data-wow-delay=".2s"><a href="https://www.facebook.com/beenzsyed"><img src="img/facebook.png" alt="" title=""></a></li>
 					<li class="animated wow fadeInRight" data-wow-delay=".1s"><a href="#"><img src="img/twitter.png" alt="" title=""></a></li>
 					<li class="animated wow fadeInRight" data-wow-delay="0s"><a href="#"><img src="img/google.png" alt="" title=""></a></li>
 				</ul>
@@ -64,7 +64,7 @@
 	<section class="hero" id="hero">
 		<div class="container">
 			<div class="caption">
-				<h1 class="text-uppercase  animated wow fadeInLeft">Creators of Robofriends and SmartBrain</h1>
+				<h1 class="text-uppercase  animated wow fadeInLeft">Creators</h1>
 				<p class="enhance text-lowercase  animated wow fadeInLeft">Developers of the future, building for today</p>
 
 				<a href="https://github.com/aneagoie/robofriends" class="app_store_btn text-uppercase animated wow fadeInLeft">
@@ -295,6 +295,7 @@
 	</footer>
 	<!--  End Footer Section  -->
 
+
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/ajaxchimp.js"></script>
 
@@ -304,6 +305,5 @@
 	<script type="text/javascript" src="js/nicescroll.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/scrollTo.js"></script>
-	
 </body>
 </html>
